[workspace]
members = [
    "kernel/drivers",
    "kernel/microbit",
    "tock/arch/cortex-m",
    "tock/arch/cortex-m0",
    "tock/arch/cortex-m0p",
    "tock/arch/cortex-m3",
    "tock/arch/cortex-m4",
    "tock/arch/cortex-m7",
    "tock/arch/riscv",
    "tock/arch/rv32i",
    "tock/boards/acd52832",
    "tock/boards/nano_rp2040_connect",
    "tock/boards/arty_e21",
    "tock/boards/opentitan/earlgrey-cw310",
    "tock/boards/esp32-c3-devkitM-1",
    "tock/boards/clue_nrf52840",
    "tock/boards/hail",
    "tock/boards/hifive1",
    "tock/boards/imix",
    "tock/boards/imxrt1050-evkb",
    "tock/boards/litex/arty",
    "tock/boards/litex/sim",
    "tock/boards/msp_exp432p401r",
    "tock/boards/microbit_v2",
    "tock/boards/nordic/nrf52840dk",
    "tock/boards/nordic/nrf52840_dongle",
    "tock/boards/nordic/nrf52dk",
    "tock/boards/nucleo_f429zi",
    "tock/boards/nucleo_f446re",
    "tock/boards/pico_explorer_base",
    "tock/boards/raspberry_pi_pico",
    "tock/boards/redboard_artemis_nano",
    "tock/boards/redboard_redv",
    "tock/boards/stm32f3discovery",
    "tock/boards/stm32f412gdiscovery",
    "tock/boards/stm32f429idiscovery",
    "tock/boards/teensy40",
    "tock/boards/nano33ble",
    "tock/boards/swervolf",
    "tock/boards/weact_f401ccu6/",
    "tock/capsules",
    "tock/chips/apollo3",
    "tock/chips/arty_e21_chip",
    "tock/chips/e310x",
    "tock/chips/earlgrey",
    "tock/chips/esp32",
    "tock/chips/esp32-c3",
    "tock/chips/imxrt10xx",
    "tock/chips/litex",
    "tock/chips/litex_vexriscv",
    "tock/chips/lowrisc",
    "tock/chips/msp432",
    "tock/chips/nrf52",
    "tock/chips/nrf52832",
    "tock/chips/nrf52833",
    "tock/chips/nrf52840",
    "tock/chips/nrf5x",
    "tock/chips/rp2040",
    "tock/chips/sam4l",
    "tock/chips/sifive",
    "tock/chips/stm32f303xc",
    "tock/chips/stm32f401cc",
    "tock/chips/stm32f429zi",
    "tock/chips/stm32f446re",
    "tock/chips/stm32f412g",
    "tock/chips/stm32f4xx",
    "tock/chips/swerv",
    "tock/chips/swervolf-eh1",
    "tock/kernel",
    "tock/libraries/enum_primitive",
    "tock/libraries/riscv-csr",
    "tock/libraries/tock-cells",
    "tock/libraries/tock-register-interface",
    "tock/libraries/tickv",
]
exclude = [
    "tock/tools/alert_codes",
    "tock/tools/board-runner",
    "tock/tools/qemu",
    "tock/tools/litex-ci-runner",
    "tock/tools/qemu-runner",
    "tock/tools/sha256sum",
    "tock/tools/usb/bulk-echo",
    "tock/tools/usb/bulk-echo-fast",
    "tock/tools/usb/bulk-test",
    "tock/tools/usb/control-test",
]

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
codegen-units = 1
